--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "description": "WhitestormJS React integration",
   "author": "Plusb Preco <plusb21@gmail.com>",
+  "main": "lib/index.js",
   "scripts": {
     "test": "npm run lint",
     "lint": "eslint --ext .js,.jsx .",
-    "build": "webpack --progress"
+    "build": "babel --out-dir lib src",
+    "clean": "rimraf lib"
   },
   "license": "MIT",
   "homepage": "https://github.com/WhitestormJS/react-whs#readme",
@@ -18,6 +20,7 @@
     "react": "^15.3.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.22.2",
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.7",
@@ -31,6 +34,7 @@
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.6.0",
+    "rimraf": "^2.5.4",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
   }
