--- a/src/.babelrc
+++ b/src/.babelrc
@@ -1,16 +1,9 @@
 {
-  "env": {
-    "node": {
-      "presets": [
-        "env",
-        "stage-1"
-      ]
-    },
-    "browser": {
-      "presets": [
-        ["env", {"targets": {"module": false}}],
-        "stage-1"
-      ]
-    }
-  }
+    "presets": [
+        "es2015"
+    ],
+    "plugins": [
+        "add-module-exports",
+        "transform-class-properties"
+    ]
 }
