--- a/package.json
+++ b/package.json
@@ -1,47 +1,23 @@
 {
-  "name": "react-whs",
-  "version": "0.0.0",
-  "description": "WhitestormJS React integration",
-  "author": "Plusb Preco <plusb21@gmail.com>",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "prepublish": "npm run build",
-    "prebuild": "npm run clean",
-    "test": "npm run lint",
-    "lint": "eslint --ext .js,.jsx .",
-    "build": "npm run babel && npm run webpack",
-    "babel": "cross-env BABEL_ENV=node babel --out-dir lib src",
-    "webpack": "cross-env BABEL_ENV=browser webpack --progress",
-    "clean": "rimraf lib"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
-  "license": "MIT",
-  "homepage": "https://github.com/WhitestormJS/react-whs#readme",
-  "repository": "WhitestormJS/react-whs",
-  "bugs": {
-    "url": "https://github.com/WhitestormJS/react-whs/issues"
-  },
-  "dependencies": {
-    "react": "^15.3.2",
-    "whs": "beta"
-  },
+  "keywords": [
+    "whs-module"
+  ],
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.0",
-    "babel-loader": "^6.2.7",
-    "babel-preset-env": "^1.1.4",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-1": "^6.16.0",
-    "babel-register": "^6.18.0",
-    "clean-webpack-plugin": "^0.1.14",
-    "cross-env": "^3.1.4",
-    "eslint": "latest",
-    "eslint-config-prev": "^3.1.0",
-    "eslint-plugin-babel": "^4.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.6.0",
-    "rimraf": "^2.5.4",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0"
+    "babel": "^6.5.2",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-class-properties": "^6.18.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-1": "^6.22.0",
+    "babel-register": "^6.8.0",
+    "path": "^0.12.7",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.2.0",
+    "whs": "^2.0.0-beta.2"
   }
 }
