--- a/package.json
+++ b/package.json
@@ -2,22 +2,29 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "npm run app",
+    "app": "webpack-dev-server --config app.webpack.config.babel.js"
   },
   "keywords": [
     "whs-module"
   ],
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-cli": "^6.22.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-class-properties": "^6.18.0",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.22.0",
     "babel-preset-stage-1": "^6.22.0",
     "babel-register": "^6.8.0",
     "path": "^0.12.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.2.0",
     "whs": "^2.0.0-beta.2"
+  },
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
