--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "build": "webpack",
     "start": "npm run app",
+    "test": "jest",
     "app": "webpack-dev-server --config app.webpack.config.babel.js"
   },
   "keywords": [
@@ -18,7 +19,9 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-1": "^6.22.0",
     "babel-register": "^6.8.0",
+    "jest": "^18.1.0",
     "path": "^0.12.7",
+    "react-test-renderer": "^15.4.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.2.0",
     "whs": "^2.0.0-beta.2"
