--- a/app/.babelrc
+++ b/app/.babelrc
@@ -5,6 +5,7 @@
     ],
     "plugins": [
         "add-module-exports",
-        "transform-class-properties"
+        "transform-class-properties",
+        "transform-decorators-legacy"
     ]
 }
