--- a/src/.babelrc
+++ b/src/.babelrc
@@ -5,6 +5,7 @@
     ],
     "plugins": [
         "add-module-exports",
+        "transform-decorators-legacy",
         "transform-class-properties"
     ]
 }
