--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jest": "^19.0.2",
     "path": "^0.12.7",
     "react-test-renderer": "^15.4.2",
+    "three": "^0.84.0",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   },
