--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "jest": "^19.0.2",
     "path": "^0.12.7",
     "react-test-renderer": "^15.4.2",
-    "three": "^0.84.0",
+    "three": "^0.87.1",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "whs": "^2.0.0-beta.6"
+    "whs": "^2.1.8"
   },
   "directories": {
     "test": "test"
