--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-register": "^6.24.0",
     "jest": "^19.0.2",
     "path": "^0.12.7",
+    "react-hot-loader": "^3.1.1",
     "react-test-renderer": "^15.4.2",
     "three": "^0.87.1",
     "webpack": "^2.3.2",
