--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.6",
   "main": "build/react-whs.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack -p",
     "start": "npm run app",
     "test": "jest",
     "app": "webpack-dev-server --config app.webpack.config.babel.js"
@@ -31,8 +31,8 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "whs": "^2.1.8"
   },
   "directories": {
