--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "test": "jest",
     "app": "webpack-dev-server --config app.webpack.config.babel.js"
   },
+  "jest": {
+    "setupFiles": [
+      "raf/polyfill"
+    ]
+  },
   "keywords": [
     "whs-module"
   ],
@@ -23,14 +28,15 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-1": "^6.22.0",
     "babel-register": "^6.24.0",
-    "jest": "^19.0.2",
+    "jest": "^21.2.1",
     "path": "^0.12.7",
-    "react-test-renderer": "^15.4.2",
+    "react-test-renderer": "^16.0.0",
     "three": "^0.87.1",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
+    "raf": "^3.4.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "whs": "^2.1.8"
