--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.6",
   "main": "build/react-whs.js",
   "scripts": {
-    "build": "webpack -p",
+    "build": "cross-env NODE_ENV=production webpack -p",
     "start": "npm run app",
     "test": "jest",
     "app": "webpack-dev-server --config app.webpack.config.babel.js"
@@ -28,10 +28,11 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-1": "^6.22.0",
     "babel-register": "^6.24.0",
+    "cross-env": "^5.1.4",
     "jest": "^21.2.1",
     "path": "^0.12.7",
-    "react-test-renderer": "^16.0.0",
     "react-hot-loader": "^3.1.1",
+    "react-test-renderer": "^16.0.0",
     "three": "^0.87.1",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
